--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,15 @@ spring.jpa.hibernate.ddl-auto=update
 # h2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+forum.jwt.expiration=86400000
+forum.jwt.secret=c781a64068896bb2870fb7ae5a26d5b0
+
+# actuator
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
+info.app.name=@project.name@
+info.app.description=@project.description@
+info.app.version=@project.version@
+info.app.encoding=@project.build.sourceEncoding@
+info.app.java.version=@java.version@
